--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.example</groupId>
+		<artifactId>Root</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../Root/pom.xml</relativePath>
 	</parent>
-	<groupId>com.example</groupId>
 	<artifactId>Application3-log4j2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Application3-log4j2</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -26,6 +24,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>Library</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
